force-app/main/default/objects/ADM_Work__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <defaultValue>&#39;To Do&#39;</defaultValue>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Work_Stage</valueSetName>
    </valueSet>
</CustomField>