force-app/main/default/objects/ADM_Work__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
            <value>
                <fullName>Triaged</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Investigating</fullName>
            </value>
            <value>
                <fullName>Ready for Review</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>QA In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Closed - Defunct</fullName>
            </value>
            <value>
                <fullName>Closed - Duplicate</fullName>
            </value>
            <value>
                <fullName>Closed - Eng Internal</fullName>
            </value>
            <value>
                <fullName>Closed - Known Bug Exists</fullName>
            </value>
            <value>
                <fullName>Closed - New Bug Logged</fullName>
            </value>
            <value>
                <fullName>Closed - LAP Request Approved</fullName>
            </value>
            <value>
                <fullName>Closed - LAP Request Denied</fullName>
            </value>
            <value>
                <fullName>Closed - Resolved With Internal Tools</fullName>
            </value>
            <value>
                <fullName>Closed - Resolved Without Code Change</fullName>
            </value>
            <value>
                <fullName>Closed - No Fix - Working as Designed</fullName>
            </value>
            <value>
                <fullName>Closed - No Fix - Feature Request</fullName>
            </value>
            <value>
                <fullName>Closed - No Fix - Will Not Fix</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>Integrate</fullName>
            </value>
            <value>
                <fullName>Pending Release</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>More Info Reqd from Support</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>Not a bug</fullName>
            </value>
            <value>
                <fullName>Not Reproducible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>