force-app/main/default/objects/ADM_Work__c/fields/Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Story_Points__c</fullName>
    <inlineHelpText>If you leave it empty on save it will automatically assign the value from the TE activity selected.</inlineHelpText>
    <label>Story Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>