force-app/main/default/objects/ADM_Work__c/fields/Story_Status__c.field-meta.xml
<CustomField>
    <fullName>Story_Status__c</fullName>
    <formula>IF( ISNULL(Closed_On__c) , &quot;Open&quot;, &quot;Closed&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Story Status</label>
    <type>Text</type>
</CustomField>