force-app/main/default/objects/ADM_Work__c/fields/Subscribe_to_Work__c.field-meta.xml
<CustomField>
    <fullName>Subscribe_to_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscribe to Work</label>
    <type>Checkbox</type>
</CustomField>