force-app/main/default/objects/ADM_Work__c/fields/System_Test_Engineer__c.field-meta.xml
<CustomField>
    <fullName>System_Test_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performance Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>System_Test_Engineer</relationshipName>
    <type>Lookup</type>
</CustomField>