force-app/main/default/objects/ADM_Work__c/fields/Target_Build__c.field-meta.xml
<CustomField>
    <fullName>Target_Build__c</fullName>
    <label>Target Build</label>
    <length>64</length>
    <type>Text</type>
</CustomField>