force-app/main/default/objects/ADM_Work__c/fields/Tech_Writer__c.field-meta.xml
<CustomField>
    <fullName>Tech_Writer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech Writer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tech_Writer</relationshipName>
    <type>Lookup</type>
</CustomField>