force-app/main/default/objects/ADM_Work__c/fields/Template_Description__c.field-meta.xml
<CustomField>
    <fullName>Template_Description__c</fullName>
    <label>Template Description</label>
    <type>TextArea</type>
</CustomField>