force-app/main/default/objects/ADM_Work__c/fields/Test_Failure_Status__c.field-meta.xml
<CustomField>
    <fullName>Test_Failure_Status__c</fullName>
    <label>Test Failure Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blocking</fullName>
            </value>
            <value>
                <fullName>Signed Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>