force-app/main/default/objects/ADM_Work__c/fields/Test_Plan__c.field-meta.xml
<CustomField>
    <fullName>Test_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Plan</label>
    <referenceTo>QA_Test_Plan__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>