force-app/main/default/objects/ADM_Work__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Theme-Deprecated</label>
    <referenceTo>ADM_Theme__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>