force-app/main/default/objects/ADM_Work__c/fields/Theme_Rank__c.field-meta.xml
<CustomField>
    <fullName>Theme_Rank__c</fullName>
    <label>Rank of work item for team in a theme</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>