force-app/main/default/objects/ADM_Work__c/fields/Total_Age_When_Closed__c.field-meta.xml
<CustomField>
    <fullName>Total_Age_When_Closed__c</fullName>
    <formula>IF(ISBLANK(Closed_On__c), 0, IF( Created_On_Date__c &gt; DATEVALUE(Closed_On__c), 0, DATEVALUE(Closed_On__c) - Created_On_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Age When Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>