force-app/main/default/objects/ADM_Work__c/fields/Trust_Rank__c.field-meta.xml
<CustomField>
    <fullName>Trust_Rank__c</fullName>
    <label>Rank of work item for trust</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>