force-app/main/default/objects/ADM_Work__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Gack</fullName>
            </value>
            <value>
                <fullName>Help</fullName>
            </value>
            <value>
                <fullName>Integrate</fullName>
            </value>
            <value>
                <fullName>Test Change</fullName>
            </value>
            <value>
                <fullName>Test Case</fullName>
            </value>
            <value>
                <fullName>Test Failure</fullName>
            </value>
            <value>
                <fullName>Test Tool</fullName>
            </value>
            <value>
                <fullName>Skunkforce</fullName>
            </value>
            <value>
                <fullName>Bug List</fullName>
            </value>
            <value>
                <fullName>Translation</fullName>
            </value>
            <value>
                <fullName>Non Deterministic Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>