force-app/main/default/objects/ADM_Work__c/fields/Type_Value__c.field-meta.xml
<CustomField>
    <fullName>Type_Value__c</fullName>
    <formula>CASE(Type__c, &quot;Test Failure&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>