force-app/main/default/objects/ADM_Work__c/fields/UE_Engineer__c.field-meta.xml
<CustomField>
    <fullName>UE_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UE Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work1</relationshipName>
    <type>Lookup</type>
</CustomField>