force-app/main/default/objects/ADM_Work__c/fields/User_Profile_of_the_Creator__c.field-meta.xml
<CustomField>
    <fullName>User_Profile_of_the_Creator__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <label>User Profile of the Creator</label>
    <type>Text</type>
</CustomField>