force-app/main/default/objects/ADM_Work__c/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <label>User Type (As a...)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>