force-app/main/default/objects/ADM_Work__c/fields/visual_link_num_of_Test_Failures__c.field-meta.xml
<CustomField>
    <fullName>visual_link_num_of_Test_Failures__c</fullName>
    <formula>HYPERLINK(&quot;https://build2.soma.salesforce.com/luna2/bughandlerreport.faces?workid=&quot;&amp; Name , TEXT(BLANKVALUE(of_Test_Failures__c, 0)) , &quot;new&quot;)</formula>
    <inlineHelpText>The number of test failures associated with this record, updated hourly. Clicking on the number redirects to a report with real-time data, which also shows the fixed test failures associated with the record.</inlineHelpText>
    <label>Test Failures</label>
    <type>Text</type>
</CustomField>