force-app/main/default/objects/ADM_Work__c/fields/Was_Ever_Returned_to_Support__c.field-meta.xml
<CustomField>
    <fullName>Was_Ever_Returned_to_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox enables tracking which Investigations were ever marked with the status picklist value &quot;returned to support.&quot;</description>
    <label>Was Ever Returned to Support</label>
    <type>Checkbox</type>
</CustomField>