force-app/main/default/objects/ADM_Work__c/recordTypes/Bug.recordType-meta.xml
<RecordType>
    <fullName>Bug</fullName>
    <active>true</active>
    <description>Used to track defects or problems</description>
    <label>Bug</label>
</RecordType>