force-app/main/default/objects/ADM_Work__c/recordTypes/Investigation.recordType-meta.xml
<RecordType>
    <fullName>Investigation</fullName>
    <active>true</active>
    <description>Used to request R&amp;D triage/diagnosis support for a customer support escalation</description>
    <label>Investigation</label>
</RecordType>