force-app/main/default/objects/ADM_Work__c/recordTypes/Template.recordType-meta.xml
<RecordType>
    <fullName>Template</fullName>
    <active>true</active>
    <description>Used to store common values which can then be applied to new Bugs</description>
    <label>Template</label>
</RecordType>