force-app/main/default/objects/ADM_Work__c/recordTypes/User_Story.recordType-meta.xml
<RecordType>
    <fullName>User_Story</fullName>
    <active>true</active>
    <description>Used by Field TEs. Used to create feature requests. You are able to check in code against the user story record.</description>
    <label>Field</label>
</RecordType>