force-app/main/default/objects/ADM_Work__c/validationRules/ValidateQAEngineerWithStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateQAEngineerWithStatus</fullName>
    <active>true</active>
    <description>QA Engineer field should be populated with Status is set to fixed</description>
    <errorConditionFormula>AND(CASE( Status__c,
&quot;Fixed&quot;, 1,
0) = 1, QA_Engineer__c = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>QA_Engineer__c</errorDisplayField>
    <errorMessage>A QA Engineer must be specified if the Status is set to Fixed</errorMessage>
</ValidationRule>