force-app/main/default/objects/ADM_Work__c/validationRules/ValidateScheduledBuildWithStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateScheduledBuildWithStatus</fullName>
    <active>false</active>
    <description>Scheduled Build field should be populated with Status is set to fixed</description>
    <errorConditionFormula>AND(CASE( Status__c,
&quot;Fixed&quot;, 1,
0) = 1, Scheduled_Build__c = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Scheduled_Build__c</errorDisplayField>
    <errorMessage>A Scheduled Build must be specified if the Status is set to Fixed</errorMessage>
</ValidationRule>