force-app/main/default/objects/ADM_Work__c/listViews/My_Work.listView-meta.xml
<ListView>
    <fullName>My_Work</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Sprint__c</columns>
    <columns>Stage__c</columns>
    <columns>Story_Points__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ADM_Work__c.User_Story</value>
    </filters>
    <label>My Work</label>
</ListView>